--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -56,13 +56,16 @@
 
         <p>Page built by JUSTINO MEDECIMO PRODUCTIONS</p>
 		
-		<a href="https://validator.w3.org/check?uri=referer">
+		<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Fjmendo10%2Fitis3135%2Fintroduction.html">
 			<img src="images/button-valid-html5.gif" width="88" height="31" alt="Link to HTML validator">
 		</a>
 
-		<a href="https://jigsaw.w3.org/css-validator/check/referer">
-			<img src="images/button-valid-css.gif" width="88" height="31" alt="Link to CSS validator">
+		<a href="http://jigsaw.w3.org/css-validator/check/referer">
+			<img style="border:0;width:88px;height:31px"
+				src="http://jigsaw.w3.org/css-validator/images/vcss"
+				alt="Valid CSS!" />
 		</a>
+	
 	
 	</footer>
 
