--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -14,7 +14,7 @@
 		<a href="tables.html">Tables</a> 
 		<a href="contract.html">Contract</a>
         <a href="introduction.html">Introduction</a>
-        <a href="HTML Forms.html">Forms</a>
+        <a href="html_forms.html">Forms</a>
         <a href="website_evaluations.html">Evaluations</a>
 	</nav>	
 	
