--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -177,7 +177,7 @@
 			<img src="images/button-valid-html5.gif" width="88" height="31" alt="Link to HTML validator">
 		</a>
 
-        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fwebpages.uncc.edu%2Fjmendo10%2Fitis3135%2Fstyles%2Fdefault.css&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fwebpages.uncc.edu%2Fjmendo10%2Fitis3135%2Fstyles%2Factivity2.css&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
                 <img style="border:0;width:88px;height:31px"
                     src="https://jigsaw.w3.org/css-validator/images/vcss"
                     alt="Valid CSS!" />
