--- a/itis3135/calculator_fcc.html
+++ b/itis3135/calculator_fcc.html
@@ -9,7 +9,7 @@
 <body>
 	
 	<main>
-        I got it to work through the calculator_try.html file. 
+        <h2> I got it to work through the calculator_try.html file. </h2> 
 	</main>
 	
 	<footer>
