--- a/itis3135/calculator_try.html
+++ b/itis3135/calculator_try.html
@@ -9,6 +9,19 @@
 </head>
   
 <body>
+    <header>
+        <h1>Justin Mendoza >> ITIS3135</h1>
+    </header>
+        <nav>
+            <a href="tables.html">Tables</a> 
+            <a href="contract.html">Contract</a>
+            <a href="introduction.html">Introduction</a>
+            <a href="html_forms.html">Forms</a>
+            <a href="website_evaluations.html">Evaluations</a>
+            <a href="jumpy-megamouth-shark-studios-llc.html">My website</a>
+            <a href="first-scripts.html">Inital scripts</a>
+            <a href="activity6.html">Polygon</a>
+        </nav>	
     <div class="Calculator">
     <div class="output">
     <div data-previous-operand class="previous-operand"></div>
