--- a/itis3135/calculator_try.html
+++ b/itis3135/calculator_try.html
@@ -21,7 +21,9 @@
             <a href="jumpy-megamouth-shark-studios-llc.html">My website</a>
             <a href="first-scripts.html">Inital scripts</a>
             <a href="activity6.html">Polygon</a>
-        </nav>	
+        </nav>
+<main>
+    <h2>Calculator</h2>	
     <div class="Calculator">
     <div class="output">
     <div data-previous-operand class="previous-operand"></div>
@@ -45,9 +47,8 @@
     <button data-number>.</button>
     <button data-number>0</button>
     <button data-equals class="span-two">=</button>
-
     </div>
-
+</main>
     <footer>
 		<br/>
 		<nav>
