--- a/itis3135/first-scripts.html
+++ b/itis3135/first-scripts.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+	
 <head>
 	<meta charset="UTF-8">
-	<script src="./scripts/alert.js"></script>
-	<script src="./scripts/JMSSLLC.js"></script>
-	<title>Justin Mendoza, ITIS3135, Jumpy Megamouth Shark Studios LLC.</title>
+	<link href="styles/default.css" rel="stylesheet" type="text/css">
+	<script src="scripts/alert.js"></script>
+	<script src="scripts/jmssllc.js"></script>
+	<title>Justin Mendoza, ITIS3135, First Scripts</title>
 </head>
 
 <body>
 	<br>
 	<img src="https://openclipart.org/image/800px/324183" alt="The shark!">
 	<header>
-			<h1>Justin Mendoza >> ITIS3135</h1>
+			<h1>Justin Mendoza // ITIS3135</h1>
 	</header>
 	
 	<main>
