--- a/itis3135/activity6.html
+++ b/itis3135/activity6.html
@@ -2,31 +2,59 @@
 <html lang="en">
 
 <head>
-    <title>Activity-6</title>
-    <meta name="description" content="Activity-6" />
 	<meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="styles\default.css" />
-	<script src="scripts\activity6.js"></script>
+    <link href="styles/default.css" rel="stylesheet" type="text/css" >
+	<script src="scripts/activity6.js"></script>
+	<title>Justin Mendoza, ITIS 3135, Activity-6</title>
 </head>
 
-<body id="body">
+<body>
+
 	<header>
-
-        <h1>Jumpy Megamouth Shark Studios LLC.</h1>
-
-        <img src="https://openclipart.org/image/800px/324183" alt="The shark!">
+        <h1>Justin Mendoza >> ITIS3135</h1>
 	</header>
+
+	<nav>
+		<a href="tables.html">Tables</a> 
+		<a href="contract.html">Contract</a>
+		<a href="introduction.html">Introduction</a>
+		<a href="html_forms.html">Forms</a>
+		<a href="website_evaluations.html">Evaluations</a>
+		<a href="jumpy-megamouth-shark-studios-llc.html">My website</a>
+		<a href="first-scripts.html">Inital scripts</a>
+	</nav>
+	<br>
 	
     <main>
-
-    	<h2>Welcome to the home of FORCED INDUCTION!</h2>
+		<h2>Name the Polygon!</h2>
+	</main>
 	
-	 </main>
-	
-	<footer id="foot">
+	<footer>
 		<br/>
-		<a href="https://validator.w3.org/check?uri=referer">Validate HTML</a> 
-		<a href="https://jigsaw.w3.org/css-validator/check/referer">Validate CSS</a>
+		<nav>
+		    <a href="https://webpages.uncc.edu/jmendo10/" target="_blank">Charlotte.edu</a> &#9553;
+		    <a href="https://github.com/jmendo10" target="_blank">Github</a> &#9553;
+		    <a href="https://jmendo10.github.io/" target="_blank">Github.io</a> &#9553;
+		    <a href="https://jmendo10.github.io/itis3135/" target="_blank">ITIS 3135 Github Pages</a> &#9553;
+		    <a href="https://www.codecademy.com/jmendo10/" target="_blank">Codecademy</a> &#9553;
+		    <a href="https://www.freecodecamp.org/jmendo10/" target="_blank">freeCodeCamp</a> &#9553;
+		    <a href="https://jsfiddle.net/user/jmendo10/" target="_blank">JSFiddle</a> &#9553;
+		    <a href="https://www.linkedin.com/in/justin-mendoza-3a057721b/" target="_blank">LinkedIn</a> &#9553;
+		</nav>
+		<br />
+
+        <p>Page built by JUSTINO MEDECIMO PRODUCTIONS</p>
+		
+		<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Fjmendo10%2Fitis3135%2Ftables.html">
+			<img src="images/button-valid-html5.gif" width="88" height="31" alt="Link to HTML validator">
+		</a>
+
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fwebpages.uncc.edu%2Fjmendo10%2Fitis3135%2Fstyles%2Factivity2.css&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+                <img style="border:0;width:88px;height:31px"
+                    src="https://jigsaw.w3.org/css-validator/images/vcss"
+                    alt="Valid CSS!" />
+        </a>
+	
 	</footer>
 
 </body>
