--- a/itis3135/activity6.html
+++ b/itis3135/activity6.html
@@ -45,11 +45,11 @@
 
         <p>Page built by JUSTINO MEDECIMO PRODUCTIONS</p>
 		
-		<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Fjmendo10%2Fitis3135%2Ftables.html">
+		<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Fjmendo10%2Fitis3135%2Factivity6.html">
 			<img src="images/button-valid-html5.gif" width="88" height="31" alt="Link to HTML validator">
 		</a>
 
-        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fwebpages.uncc.edu%2Fjmendo10%2Fitis3135%2Fstyles%2Factivity2.css&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fwebpages.uncc.edu%2Fjmendo10%2Fitis3135%2Fstyles%2Fdefault.css&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
                 <img style="border:0;width:88px;height:31px"
                     src="https://jigsaw.w3.org/css-validator/images/vcss"
                     alt="Valid CSS!" />
