--- a/itis3135/calculator_fcc.html
+++ b/itis3135/calculator_fcc.html
@@ -7,10 +7,23 @@
 </head>
 
 <body>
+    <header>
+        <h1>Justin Mendoza >> ITIS3135</h1>
+    </header>
+        <nav>
+            <a href="tables.html">Tables</a> 
+            <a href="contract.html">Contract</a>
+            <a href="introduction.html">Introduction</a>
+            <a href="html_forms.html">Forms</a>
+            <a href="website_evaluations.html">Evaluations</a>
+            <a href="jumpy-megamouth-shark-studios-llc.html">My website</a>
+            <a href="first-scripts.html">Inital scripts</a>
+            <a href="activity6.html">Polygon</a>
+        </nav>
 	
-	<main>
-        <h2> I got it to work through the calculator_try.html file. </h2> 
-	</main>
+<main>
+    <h2> I got it to work through the calculator_try.html file. </h2> 
+</main>
 	
 	<footer>
 		<br/>
