--- a/itis3135/html_forms.html
+++ b/itis3135/html_forms.html
@@ -63,7 +63,7 @@
         <p>Page built by JUSTINO MEDECIMO PRODUCTIONS</p>
 		
 		<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Fjmendo10%2Fitis3135%2FHTML+Forms.html">
-			<img src="images/button-valid-html5.gif" width="88" height="31" alt="Link to HTML validator">
+			<img src="images/button-valid-html5.gif" width="88" height="31" alt="">
 		</a>
 
         <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fwebpages.uncc.edu%2Fjmendo10%2Fitis3135%2Fstyles%2Fdefault.css&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
