--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <p> Hello, my name is Justin Mendoza and I am a Computer Science student at UNC Charlotte.</p>
 
-    <p><a href="itis3135/">ITIS3135 Work</a></p>
+    <a href="https://webpages.uncc.edu/jmendo10/itis3135/" target="_blank">ITIS3135 Work</a>
 
 </main>
 <footer>
