--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,1 +1,35 @@
-I am Justin Mendoza and this is my ITIS3135 First Course Page
+<!DOCTYPE html>
+<html lang="en">
+   <head>
+      <meta charset="UTF-8">
+      <link href="styles/default.css" rel="stylesheet" type="text/css" >
+      <title>Home</title>
+   </head>
+
+   <header>
+      <h1>Home</h1>
+   </header>
+
+   <footer>
+    <nav>
+	    <a href="https://webpages.uncc.edu/jmendo10/itis3135/" target="_blank">Home</a>
+        <a href="https://webpages.uncc.edu/jmendo10/itis3135/introduction.html" target="_blank">Introduction</a>	
+	    <a href="https://webpages.uncc.edu/jmendo10/itis3135/project/" target="_blank">Project</a>  
+	    <a href="https://webpages.uncc.edu/jmendo10/" target="_blank">Webpages</a>
+        <a href="https://webpages.uncc.edu/jmendo10/itis3135/tables.html" target="_blank">Tables</a>
+	    <a href="https://webpages.uncc.edu/jmendo10/itis3135/contract.html" target="_blank">Contract</a>
+        <a href="https://github.com/jmendo10" target="_blank">Github</a>
+        <a href="https://jmendo10.github.io/" target="_blank">Github.io</a>
+    </nav>
+      <br />
+
+      <p>Page built by JUSTINO MEDECIMO PRODUCTIONS</p>
+
+      <a href="https://validator.w3.org/check?uri=referer">
+      <img src="images/button-valid-html5.gif" width="88" height="31" alt="Link to HTML validator"></a>
+      <a href="https://jigsaw.w3.org/css-validator/check/referer">
+      <img src="images/button-valid-css.gif" width="88" height="31" alt="Link to CSS validator"></a>
+
+   </footer>
+   
+</html>
