--- a/itis3135/project/ecuTuning.html
+++ b/itis3135/project/ecuTuning.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
 	<link href="styles/default.css" rel="stylesheet" type="text/css" >
 	<title>Justin Mendoza, ITIS3135, Project ECU</title>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="scripts/manufacturers.js"></script>
+
 </head>
 
 <body>
@@ -39,6 +42,12 @@
                 </div>
             </div>
         </figure>
+
+        <br>
+
+        <h3>Manufacturers</h3>
+
+        <div id="manufacturers"> </div>
         
     </main>
 
