--- a/itis3135/project/turbos.html
+++ b/itis3135/project/turbos.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
 	<link href="styles/default.css" rel="stylesheet" type="text/css" >
 	<title>Justin Mendoza, ITIS3135, Project Turbos</title>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="scripts/turbmanufacturers.js"></script>
 </head>
 
 <body>
@@ -35,6 +37,12 @@
                 <a href="https://agpturbo.com/precision-6266-cea/"><img src="images/precision2.jpg" alt="precision2" width="200" height="175"><div class="caption">A high end turbocharger for stronger builds.</div></a>
             </div>
         </div>
+
+        <br>
+
+        <h3>Manufacturers</h3>
+
+        <div id="turbmanufacturers"> </div>
 
     </main>
 
