--- a/jfairProject/index.html
+++ b/jfairProject/index.html
@@ -4,25 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grammar Editor</title>
+    <title>Password Generator</title>
     <link href="styles/default.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
     <div id=container>
-        Grammar Editor
+        Password Generator
         <div id=flip>
           <div><div>Mendoza</div></div>
           <div><div>Justin</div></div>
           <div><div>By</div></div>
         </div>
     </div>
-    
-    <textarea id="textInput" placeholder="Enter your text here..."></textarea>
-    <button onclick="checkGrammar()">Check Grammar</button>
-    <div id="results"></div>
-    <script src="edit.js"></script>
+
+    <div>
+        <label for="length">Password Length:</label>
+        <input type="number" id="length" min="8" value="12">
+    </div>
+
+    <div>
+        <button onclick="generatePassword()">Generate</button>
+    </div>
+
+    <div>
+        <label for="password">Generated Password:</label>
+        <input type="text" id="password" readonly>
+    </div>
+
+    <script src="scripts/edit.js"></script>
 
 </body>
 </html>
